Fix swagger wrong docs
